objects/Account.object
<CustomObject>
    <fields>
        <fullName>PMC_SS_SalesDistrict__c</fullName>
        <description>A geographical region that aligns with industry standard sales territories.</description>
        <label>Sales District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Z00001</fullName>
                    <label>Z00001 - AG MBP</label>
                </value>
                <value>
                    <fullName>Z00002</fullName>
                    <label>Z00002 - AG Non – MBP</label>
                </value>
                <value>
                    <fullName>CA0002</fullName>
                    <label>CA0002 - Alberta</label>
                </value>
                <value>
                    <fullName>Z00043</fullName>
                    <label>Z00043 - Asia</label>
                </value>
                <value>
                    <fullName>Z00044</fullName>
                    <label>Z00044 - Australia</label>
                </value>
                <value>
                    <fullName>ZCN010</fullName>
                    <label>ZCN010 - Bend</label>
                </value>
                <value>
                    <fullName>ZCN093</fullName>
                    <label>ZCN093 - B2B</label>
                </value>
                <value>
                    <fullName>ZCN037</fullName>
                    <label>ZCN037 - B2B AG</label>
                </value>
                <value>
                    <fullName>BR0005</fullName>
                    <label>BR0005 - Central West Brazil</label>
                </value>
                <value>
                    <fullName>Z00030</fullName>
                    <label>Z00030 - Corn belt</label>
                </value>
                <value>
                    <fullName>Z00032</fullName>
                    <label>Z00032 - Delta</label>
                </value>
                <value>
                    <fullName>Z00040</fullName>
                    <label>Z00040 - East Coast</label>
                </value>
                <value>
                    <fullName>ZCN015</fullName>
                    <label>ZCN015 - East-B2B</label>
                </value>
                <value>
                    <fullName>Z00034</fullName>
                    <label>Z00034 - Eastern Canada</label>
                </value>
                <value>
                    <fullName>CN0004</fullName>
                    <label>CN0004 - Eastern China</label>
                </value>
                <value>
                    <fullName>Z00031</fullName>
                    <label>Z00031 - Eastern Corn Belt</label>
                </value>
                <value>
                    <fullName>IN0004</fullName>
                    <label>IN0004 - Eastern Indian</label>
                </value>
                <value>
                    <fullName>ZCN008</fullName>
                    <label>ZCN008 - Export</label>
                </value>
                <value>
                    <fullName>Z00004</fullName>
                    <label>Z00004 - Feed Key</label>
                </value>
                <value>
                    <fullName>Z00005</fullName>
                    <label>Z00005 - Feed Opportunistic</label>
                </value>
                <value>
                    <fullName>Z00003</fullName>
                    <label>Z00003 - Feed Strategic</label>
                </value>
                <value>
                    <fullName>ZBR004</fullName>
                    <label>ZBR004 - Fospar BR</label>
                </value>
                <value>
                    <fullName>ZBR008</fullName>
                    <label>ZBR008 - Frederico Seckler</label>
                </value>
                <value>
                    <fullName>ZCN003</fullName>
                    <label>ZCN003 - HB-HN</label>
                </value>
                <value>
                    <fullName>Z00021</fullName>
                    <label>Z00021 - India</label>
                </value>
                <value>
                    <fullName>Z00006</fullName>
                    <label>Z00006 - Industrial Tier I</label>
                </value>
                <value>
                    <fullName>Z00007</fullName>
                    <label>Z00007 - Industrial Tier II</label>
                </value>
                <value>
                    <fullName>Z00008</fullName>
                    <label>Z00008 - Industrial Tier III</label>
                </value>
                <value>
                    <fullName>ZBR002</fullName>
                    <label>ZBR002 - João Sampaio</label>
                </value>
                <value>
                    <fullName>ZCN013</fullName>
                    <label>ZCN013 - JS-AH</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesOffice__c</fullName>
        <description>States the Sales Office for the Account.</description>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesOrg__c</fullName>
        <inlineHelpText>For Brazil, select option “Mosaic Fert Brasil Ltda” for distribution or select option “Mosaic Fert P&amp;K Ltda” for P&amp;K. For Paraguay, select the option “Mosaic Fert Paraguay”. For Canada, select “Mosaic CAN Crop Nutr LP”. For US, select “Mosaic Global Sales, LLC”. For Ammonia, select “Tampa Port Services LLC”</inlineHelpText>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1002</fullName>
                    <label>1002 - Mosaic Global Sales LLC</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>1003 - Mosaic Crop Nutrition LLC</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>1004 - Mosaic Fertilizer LLC</label>
                </value>
                <value>
                    <fullName>1005</fullName>
                    <label>1005 - Mosaic Potash Carlsbad</label>
                </value>
                <value>
                    <fullName>1025</fullName>
                    <label>1025 - Tampa Port Services LLC</label>
                </value>
                <value>
                    <fullName>1026</fullName>
                    <label>1026 - MOS Ag Innovation Sol LLC</label>
                </value>
                <value>
                    <fullName>1030</fullName>
                    <label>1030 - Gulf Sulphur Service, LTD</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <label>2000 - Mosaic CAN Crop Nutr LP</label>
                </value>
                <value>
                    <fullName>2001</fullName>
                    <label>2001 - Mosaic Potash COL ULC</label>
                </value>
                <value>
                    <fullName>2002</fullName>
                    <label>2002 - Mosaic Potash EST LP</label>
                </value>
                <value>
                    <fullName>2003</fullName>
                    <label>2003 - Mosaic Canada ULC (BP)</label>
                </value>
                <value>
                    <fullName>4000</fullName>
                    <label>4000 - Mosaic Fert Brasil Ltda</label>
                </value>
                <value>
                    <fullName>4001</fullName>
                    <label>4001 - Fospar SA</label>
                </value>
                <value>
                    <fullName>4004</fullName>
                    <label>4004 - Mosaic Potássio Mineração</label>
                </value>
                <value>
                    <fullName>4005</fullName>
                    <label>4005 - Mosaic Fert P&amp;K Ltda</label>
                </value>
                <value>
                    <fullName>4600</fullName>
                    <label>4600 - Mosaic Fert Bahamas Ltd</label>
                </value>
                <value>
                    <fullName>4620</fullName>
                    <label>4620 - Mosaic Fert Paraguay SRL</label>
                </value>
                <value>
                    <fullName>4680</fullName>
                    <label>4680 - Co Minera Miski Mayo SRL</label>
                </value>
                <value>
                    <fullName>1310</fullName>
                    <label>1310 - Dom. Sales Org CN</label>
                </value>
                <value>
                    <fullName>1410</fullName>
                    <label>1410 - Dom. Sales Org BR</label>
                </value>
                <value>
                    <fullName>1710</fullName>
                    <label>1710 - Dom. Sales Org US</label>
                </value>
                <value>
                    <fullName>1810</fullName>
                    <label>1810 - Dom. Sales Org IN</label>
                </value>
                <value>
                    <fullName>2910</fullName>
                    <label>2910 - Dom. Sales Org CA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesRegion__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL00</fullName>
                    <label>Maceió</label>
                </value>
                <value>
                    <fullName>AM01</fullName>
                    <label>Itacoatiara</label>
                </value>
                <value>
                    <fullName>BA01</fullName>
                    <label>Luis Eduardo Magalhães</label>
                </value>
                <value>
                    <fullName>BA02</fullName>
                    <label>Candeias</label>
                </value>
                <value>
                    <fullName>BA03</fullName>
                    <label>Feira de Santana</label>
                </value>
                <value>
                    <fullName>BA04</fullName>
                    <label>Camaçari</label>
                </value>
                <value>
                    <fullName>BA05</fullName>
                    <label>Conceição do Jacuipe</label>
                </value>
                <value>
                    <fullName>BA50</fullName>
                    <label>Barreiras</label>
                </value>
                <value>
                    <fullName>BA51</fullName>
                    <label>Correntina</label>
                </value>
                <value>
                    <fullName>BA52</fullName>
                    <label>Formosa do Rio Preto</label>
                </value>
                <value>
                    <fullName>BA53</fullName>
                    <label>Riachão das Neves</label>
                </value>
                <value>
                    <fullName>BA54</fullName>
                    <label>São Desidério</label>
                </value>
                <value>
                    <fullName>ES01</fullName>
                    <label>Serra</label>
                </value>
                <value>
                    <fullName>ES02</fullName>
                    <label>Viana</label>
                </value>
                <value>
                    <fullName>ES03</fullName>
                    <label>Vitória</label>
                </value>
                <value>
                    <fullName>ES04</fullName>
                    <label>Ibatiba</label>
                </value>
                <value>
                    <fullName>GO01</fullName>
                    <label>Bom Jesus de Goiás</label>
                </value>
                <value>
                    <fullName>GO02</fullName>
                    <label>Rio Verde</label>
                </value>
                <value>
                    <fullName>GO03</fullName>
                    <label>Anápolis</label>
                </value>
                <value>
                    <fullName>GO04</fullName>
                    <label>Catalão</label>
                </value>
                <value>
                    <fullName>GO05</fullName>
                    <label>Formosa</label>
                </value>
                <value>
                    <fullName>GO06</fullName>
                    <label>Aparecida de Goiania</label>
                </value>
                <value>
                    <fullName>GO07</fullName>
                    <label>Goiatuba</label>
                </value>
                <value>
                    <fullName>GO08</fullName>
                    <label>Cristalina</label>
                </value>
                <value>
                    <fullName>GO09</fullName>
                    <label>Itumbiara</label>
                </value>
                <value>
                    <fullName>GO10</fullName>
                    <label>Jataí</label>
                </value>
                <value>
                    <fullName>GO11</fullName>
                    <label>Posse</label>
                </value>
                <value>
                    <fullName>MA01</fullName>
                    <label>São Luis</label>
                </value>
                <value>
                    <fullName>MA02</fullName>
                    <label>Açailândia</label>
                </value>
                <value>
                    <fullName>MA03</fullName>
                    <label>Alto Parnaíba</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SearchTerm__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Search Term</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Segmentation__c</fullName>
        <description>Segmentation the Customer belongs to.</description>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>14</fullName>
                    <label>14 - Base</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 - Canal - KAM</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13 - Core</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>9 - Canal - Basic / Grow</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>3 - EU - KAM Mega Farmer</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>4 - EU - Mega Farmer</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>7 - Canal - Prime</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>6 - EU - Farmer/Mid/Small</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12 - Strategic</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>5 - EU - Top Farmer</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11 - Trader - KAM</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>8 - Canal - Ultra</label>
                </value>
                <value>
                    <fullName>A</fullName>
                    <label>A - Customer</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B - Customer</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C - Customer</label>
                </value>
                <value>
                    <fullName>Basic</fullName>
                    <isActive>false</isActive>
                    <label>Canal-Basic/Grow</label>
                </value>
                <value>
                    <fullName>Farmers</fullName>
                    <isActive>false</isActive>
                    <label>Farmers</label>
                </value>
                <value>
                    <fullName>Mid Farmers</fullName>
                    <isActive>false</isActive>
                    <label>Mid Farmers</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SellerVisa__c</fullName>
        <description>Brazilian Seller Visa</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Seller Visa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ShippingCondition__c</fullName>
        <label>Shipping Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Z0</fullName>
                    <label>No Transport  Req</label>
                </value>
                <value>
                    <fullName>Z1</fullName>
                    <label>Rail</label>
                </value>
                <value>
                    <fullName>Z2</fullName>
                    <label>Truck</label>
                </value>
                <value>
                    <fullName>Z3</fullName>
                    <label>Vessel</label>
                </value>
                <value>
                    <fullName>Z4</fullName>
                    <label>Barge</label>
                </value>
                <value>
                    <fullName>Z6</fullName>
                    <label>Road / Rail Auto Sch</label>
                </value>
                <value>
                    <fullName>Z7</fullName>
                    <label>IN-Inland/Intermodal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SoldToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field on the Ship-to Account that is looking up to the Sold-to Account</description>
        <inlineHelpText>Provide the Sold-to customer for linking</inlineHelpText>
        <label>Sold-to partner related</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Sold-to</value>
            </filterItems>
            <filterItems>
                <field>Account.PMC_SS_SAPCustomerNumber__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sold-to partner related</relationshipLabel>
        <relationshipName>Shipto_Sold</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_StateRegistrationNumber__c</fullName>
        <description>States the State Registration Number</description>
        <label>State Registration Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_StateTaxNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Tax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_StrengthsPlan__c</fullName>
        <description>Strengths of the Account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Strengths (Plan)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_TaxIDOrCNPJOrCPF__c</fullName>
        <description>States the Tax ID Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID or CNPJ or SSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ThreatsPlan__c</fullName>
        <description>Threats of the Account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Threats (Plan)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_TonnageTaxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tonnage Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_TransportationZone__c</fullName>
        <description>Truck= State + The first 7 letters of the city.

Rail = Ask the customer for the &quot;rail siding&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>*Please use SAP t-code OVR1</inlineHelpText>
        <label>Transportation Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Transportation_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transportation Zone</label>
        <referenceTo>PMC_SS_Transportation__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Underdeltolerance__c</fullName>
        <defaultValue>(0.99)</defaultValue>
        <label>Underdel. Tolerance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitofMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture account&apos;s unit of measure</description>
        <label>Unit of Measure</label>
        <referenceTo>UnitOfMeasure</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Veson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veson Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_WeaknessesPlan__c</fullName>
        <description>Weaknesses of the Account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Weaknesses (Plan)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <label>Partner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payer_partner_related__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer partner related</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Payer partner related)</relationshipLabel>
        <relationshipName>PayerPartner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_Sold__c</fullName>
        <label>Products Sold</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products_Sold</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s assets, or choose Contract Based to make renewals based off of contracts created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Channel_Attribute_5__c</fullName>
        <label>Sales Channel – Attribute 5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10 – NAM</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11 – IS</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12 – ID</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13 – Canpotex</label>
                </value>
                <value>
                    <fullName>5A</fullName>
                    <label>5A – Attribute 5A</label>
                </value>
                <value>
                    <fullName>5B</fullName>
                    <label>5B – Attribute 5B</label>
                </value>
                <value>
                    <fullName>5C</fullName>
                    <label>5C – Wet ton invoice</label>
                </value>
                <value>
                    <fullName>5D</fullName>
                    <label>5D – Dry ton invoice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <description>Sales Group</description>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_SS_SalesOffice__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sales_Group_Global</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Potential__c</fullName>
        <label>Sales Potential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 a 2 thousand tons</fullName>
                </value>
                <value>
                    <fullName>2 a 4 thousand tons</fullName>
                </value>
                <value>
                    <fullName>4 a 9 thousand tons</fullName>
                </value>
                <value>
                    <fullName>9 a 15 thousand tons</fullName>
                </value>
                <value>
                    <fullName>more than 15 thousand tons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>